--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>🚘 Welcome to the Car Tracker App</h1>
         <p>This app lets you track your cars, add new entries, update info, and delete records easily.</p>
-        <a> href="/cars"><button class="btn">View All Cars</button> </a>
+        <a href="/cars"><button class="btn">View All Cars</button></a>
     </div>
     <script src="/script.js"></script>
 </body>
